--- a/Session 8/8.1 Blog Applicaion/blog/templates/blog/base.html
+++ b/Session 8/8.1 Blog Applicaion/blog/templates/blog/base.html
@@ -29,8 +29,16 @@
                 </div>
                 <!-- Navbar Right Side -->
                 <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Login</a>
-                <a class="nav-item nav-link" href="#">Register</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'profile' %}" class="nav-item nav-link">Profile</a>
+                        <form method="POST" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button class="nav-item nav-link btn btn-link" type="submit">Logout</button>
+                        </form>
+                    {% else %}
+                    <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
+                    <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+                    {% endif %}
                 </div>
             </div>
         </div>
