--- a/Session 8/8.1 Blog Applicaion/users/templates/users/login.html
+++ b/Session 8/8.1 Blog Applicaion/users/templates/users/login.html
@@ -5,16 +5,16 @@
         <form method= "POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class= "border-bottom mb-4"> Join Today </legend>
+                <legend class= "border-bottom mb-4"> Log In </legend>
                 {{form|crispy}}
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit"> SignUp </button>
+                <button class="btn btn-outline-info" type="submit"> LogIn </button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already Have an Account? <a href="{% url 'login'%}">Sign Up</a>
+                Need an Account? <a href="{% url 'register' %}">Sign Up now</a>
             </small>
         </div>
     </div>
