--- a/Session 8/8.1 Blog Applicaion/blog/templates/blog/base.html
+++ b/Session 8/8.1 Blog Applicaion/blog/templates/blog/base.html
@@ -27,9 +27,9 @@
                 <a class="nav-item nav-link" href="{% url 'blog-home' %}">Home</a>
                 <a class="nav-item nav-link" href="{% url 'blog-about' %}">About</a>
                 </div>
-                <!-- Navbar Right Side -->
                 <div class="navbar-nav">
                     {% if user.is_authenticated %}
+                        <a href="{% url 'post-create' %}" class="nav-item nav-link">New Post</a>
                         <a href="{% url 'profile' %}" class="nav-item nav-link">Profile</a>
                         <form method="POST" action="{% url 'logout' %}">
                             {% csrf_token %}
